# ProgrammingLanguages

./: .gitignore  CMakeLists.txt  README.md
Alpha/: README.md  grammar.bnf
Alpha/Grammar/: grammar.bnf
Alpha/LexicalAnalysis/: test.alpha
Alpha/LexicalAnalysis/includes/: Alpha.h  Lexeme.h  Lexer.h
Alpha/LexicalAnalysis/src/: Alpha.cpp  Lexeme.cpp  Lexer.cpp
Alpha/TestFiles/: apply.alpha  conditional.alpha  crissCross.alpha  distanceTo21.alpha  everything.alpha  factitude.alpha  fxnCall.alpha  fxnDeclaration.alpha  loop.alpha  math.alpha  maxOfThree.alpha  noDoubles.alpha  noSevens.alpha  recognizertest.alpha  returnStatement.alpha  squareMachine.alpha  triangle.alpha  variableInit.alpha
Alpha/includes/: Alpha.h
Alpha/includes/Environment/: Environment.h
Alpha/includes/Evaluation/: Evaluator.h
Alpha/includes/LexicalAnalysis/: Lexeme.h  Lexer.h
Alpha/includes/Parsing/: Parser.h
Alpha/includes/Recognizing/: Recognizer.h
Alpha/src/: Alpha.cpp
Alpha/src/Environment/: Environment.cpp
Alpha/src/Evaluation/: Evaluator.cpp
Alpha/src/LexicalAnalysis/: Lexeme.cpp  Lexer.cpp
Alpha/src/Parsing/: Parser.cpp
Alpha/src/Recognizing/: Recognizer.cpp
